plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neoforge_version

    // parchment {
    //     mappingsVersion = project.neoforge_version
    //     minecraftVersion = project.minecraft_version
    // }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: "[1.21.1,1.22)",
            neo_version            : neoforge_version,
            neo_version_range      : "[21.1,22)",
            loader_version_range   : "[4,)",
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register("printMethods") {
    doLast {
        def urls = configurations.compileClasspath.resolve().collect { it.toURI().toURL() }
        def classLoader = new URLClassLoader(urls as URL[], this.class.classLoader)
        
        println "--- Entity Save Methods ---"
        def c = classLoader.loadClass("net.minecraft.world.entity.Entity")
        c.declaredMethods.each {
            if (it.name.contains("Save") || it.name.contains("read")) println it
        }

        println "--- RenderType Methods ---"
        def r = classLoader.loadClass("net.minecraft.client.renderer.rendertype.RenderType")
        r.declaredMethods.each {
            if (it.name.contains("entityTranslucent")) println it
        }

        println "--- RenderLayer Methods ---"
        def rl = classLoader.loadClass("net.minecraft.client.renderer.entity.layers.RenderLayer")
        rl.declaredMethods.each {
            println it
        }
    }
}
tasks.register("printMethods2") {
    doLast {
        def urls = configurations.compileClasspath.resolve().collect { it.toURI().toURL() }
        def classLoader = new URLClassLoader(urls as URL[], this.class.classLoader)
        
        println "--- ValueOutput Methods ---"
        def vo = classLoader.loadClass("net.minecraft.world.level.storage.ValueOutput")
        vo.declaredMethods.each { println it.name + " " + it.parameterTypes.collect{it.name}.join(",") }

        println "--- ValueInput Methods ---"
        def vi = classLoader.loadClass("net.minecraft.world.level.storage.ValueInput")
        vi.declaredMethods.each { println it.name + " " + it.parameterTypes.collect{it.name}.join(",") }

        println "--- RenderType Methods ---"
        def r = classLoader.loadClass("net.minecraft.client.renderer.rendertype.RenderType")
        r.declaredMethods.each {
            if (it.name.toLowerCase().contains("entity")) println it.name + " " + it.parameterTypes.collect{it.name}.join(",")
        }
    }
}
tasks.register("printMethods3") {
    doLast {
        def urls = configurations.compileClasspath.resolve().collect { it.toURI().toURL() }
        def classLoader = new URLClassLoader(urls as URL[], this.class.classLoader)
        
        println "--- RenderType Static Methods ---"
        def r = classLoader.loadClass("net.minecraft.client.renderer.rendertype.RenderType")
        r.declaredMethods.each {
            if (java.lang.reflect.Modifier.isStatic(it.modifiers) && it.returnType.name.contains("RenderType")) {
                println it.name + " " + it.parameterTypes.collect{it.name}.join(",")
            }
        }
    }
}
tasks.register("printMethods4") {
    doLast {
        def urls = configurations.compileClasspath.resolve().collect { it.toURI().toURL() }
        def classLoader = new URLClassLoader(urls as URL[], this.class.classLoader)
        // just look at some common classes
        def classes = [
            "net.minecraft.client.renderer.RenderType",
            "net.minecraft.client.renderer.rendertype.RenderType",
            "net.minecraft.client.renderer.rendertype.RenderTypes"
        ]
        classes.each { cName ->
            try {
                def c = classLoader.loadClass(cName)
                println "--- Found Class: ${cName} ---"
                c.declaredMethods.each {
                    if (it.name.toLowerCase().contains("entity")) {
                        println it.name + " " + it.parameterTypes.collect{it.name}.join(",")
                    }
                }
            } catch (Exception e) {
                println "Not found: ${cName}"
            }
        }
    }
}
tasks.register("printMethods5") {
    doLast {
        def urls = configurations.compileClasspath.resolve().collect { it.toURI().toURL() }
        def classLoader = new URLClassLoader(urls as URL[], this.class.classLoader)
        def c = classLoader.loadClass("net.minecraft.client.renderer.entity.EntityRenderer")
        c.declaredMethods.each {
            if (it.name == "render" || it.name == "submit") println it
        }
    }
}
